@@ -18,6 +18,9 @@ Fixed: Issue #672: FreeBSD: Support I/O statistics for raid and encrypted partit
 
 Fixed: Issue #676: Process CPU usage is reported always as 0.0% in the first cycle after process start
 
+Fixed: Issue #680: Port test: If the protocol check failed, the SSL certificate expiration test returned
+false positive error.
+
 Fixed: MacOS: Support disk I/O monitoring for APFS
 
 Fixed: MacOS: Fix platform name and version for MacOS High Sierra.
